[package]
name = "kik_sync_service"
version = "0.7.0"
license = "MIT"
authors = ["On0n0k1 <stiltztinkerstein@gmail.com>"]
description = "A synchronous threading worker channel for generating the results you want with the data you need."
edition = "2018"
repository = "https://github.com/On0n0k1/kik_sync_service.git"
keywords = ["synchronous", "sync", "buffer", "image", "thread", "for", "channel", "stream", "data science", "requests", "graphics"]
categories = ["concurrency", "embedded", "hardware-support", "multimedia", "rust-patterns"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
